force-app/main/default/objects/Databricks_OAuth_Settings__mdt/Databricks_OAuth_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Info for Databricks endpoint authentication</description>
    <label>Databricks OAuth Setting</label>
    <pluralLabel>Databricks OAuth Settings</pluralLabel>
</CustomObject>