force-app/main/default/objects/Databricks_OAuth_Settings__mdt/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Stores the token</description>
    <label>Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>