force-app/main/default/objects/Databricks_OAuth_Settings__mdt/fields/Token_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Token_Expires_At__c</fullName>
    <label>Token Expires At</label>
    <type>DateTime</type>
</CustomField>