force-app/main/default/objects/Databricks_OAuth_Settings__mdt/fields/Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Token_Url__c</fullName>
    <label>Token Url</label>
    <length>120</length>
    <type>Text</type>
</CustomField>